--- a/FunctionalBenchmarks/FunctionalBenchmarks.csproj
+++ b/FunctionalBenchmarks/FunctionalBenchmarks.csproj
@@ -6,18 +6,20 @@
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
+
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-        <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
-        <PackageReference Include="coverlet.collector" Version="3.1.2" />
+      <ProjectReference Include="..\Functional\Functional.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Functional\Functional.csproj" />
+      <Folder Include="ResultBenchmarks" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
     </ItemGroup>
 
 </Project>
